# TKGLisp

./: .gitignore  CMakeLists.txt  README.md
include/: integer.hpp  list.hpp  types.hpp  value.hpp
src/: list.cpp  main.cpp  value.cpp
